# c-game-server

./: .gitignore  CMakeLists.txt  README.md  build_server.sh  client.c  client.out  common.h  game.c  game.h  headers.h  map.c  map.h  message.c  message.h  player.c  player.h  server.c  server.h  server.out  types.h
src/: client.c  common.c  common.h  game.h  map.c  map.h  message.c  message.h  msgcodes.h  player.c  player.h  server.c  server.h
